--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,astro,css,html,json,md}\""
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
@@ -17,6 +18,7 @@
     "@heroicons/react": "^2.1.3",
     "astro": "^4.8.5",
     "bootstrap": "^5.3.3",
+    "flowbite": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
