--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vue": "^4.2.0",
     "@heroicons/react": "^2.1.3",
-    "astro": "^4.8.5",
+    "astro": "^4.8.6",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "flowbite": "^2.3.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
