--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,astro,css,html,json,md}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,astro,css,html,json,md}\"",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
@@ -28,6 +29,7 @@
     "vue": "^3.4.27"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.14"
