--- a/package.json
+++ b/package.json
@@ -13,22 +13,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/react": "^3.3.4",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vue": "^4.2.0",
-    "@heroicons/react": "^2.1.3",
     "astro": "^4.8.6",
-    "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.3",
     "flowbite": "^2.3.0",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vue": "^3.4.27"
   },
   "devDependencies": {
+    "@types/react": "^18.3.2",
     "gh-pages": "^6.1.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
